@@ -1,3 +1,5 @@
+2013-07-05 add static file controller
+           Config: remove setter helpers, add path helers
 2013-07-03 add multipart request parsing
 2013-07-01 add flash helper
 2013-06-30 add Nyara::Test::Response for test to parse response
